@@ -126,14 +126,14 @@
             <metal:items tal:repeat="vid three_other" >
                 <li class="vidthumb" tal:define="last repeat/vid/end" tal:attributes="class python:test(last, 'vidthumb last', 'vidthumb')">
                     <a class="thickbox" href="" tal:attributes="href vid/listing_url">
-                        <img src="" tal:attributes="src string:${vid/url}/image_wide" />
+                        <img src="" tal:attributes="src string:${vid/url}/image_wide; title vid/title" />
                     </a>
                 </li>
             </metal:items>
         </ul>
         <div id="big_vid">
             <a class="thickbox" href="" tal:attributes="href first_vid/listing_url">
-                <img src="" tal:attributes="src string:${first_vid/url}/image_wide" />
+                <img src="" tal:attributes="src string:${first_vid/url}/image_wide; title first_vid/title" />
             </a>
         </div>
         <div class="visualClear"><!-- --></div>
